@@ -1,6 +1,9 @@
 New in v1.3.3 (????/??/??)
 ---------------------------
 
+Improve handling of incorrect permissions on backup repository during restore
+operation. Closes Ubuntu bug #329722. (Andrew Ferguson)
+
 Don't crash on zlib errors. Closes Debian bug #518531. (Andrew Ferguson)
 
 Make sticky bit warnings quieter while determining file system abilities.
